--- a/auto-pages/login.html
+++ b/auto-pages/login.html
@@ -39,7 +39,7 @@
               </div>
 
               <div class="button text-center">
-                <button type="submit" class="btn" id="loginButton">Entrar</button>
+                <a href="../index.html"><button type="submit" class="btn" id="loginButton">Entrar</button></a>
               </div>
 
               <div class="cadastrar-link text-center text-white">
