--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container-fluid ">
               <div id="div-header" class="">
                   <!--============Logo=================--> 
-                  <div class="logo   col-md-2">
+                  <div class="logo ">
                     <h1 style=" font-size: 2.5rem;">Tennis <br> <img src="./components/img/le1.png" alt="" id="logo"> Stor</h1>
                   </div>
                   
